Conformance/Compiler/testsuite/src/tests/a_cangjie_grammar_summary/01_lexical_grammar/01_comments/a01/test_a01_08.cj

/*
 * Copyright (c) Huawei Technologies Co., Ltd. 2025. All rights reserved.
 * This source file is part of the Cangjie project, licensed under Apache-2.0
 * with Runtime Library Exception.
 * 
 * See https://cangjie-lang.cn/pages/LICENSE for license information.
 */

/*
  @Name:        A_01_01_a01_08

  @Level:         1
  @Assertion:   A.1.1(1)
                DelimitedComment
                    : '/*' ( DelimitedComment | . )*? '*/'
                    ;
  @Description: Check delimited comment syntax
  @Comment:     Auto-generated tests by gen_comments_tests_a01.py with seed = 1
  @Mode:        run
  @Negative:    no
  @Structure:   single
*/
import utils.assert.Assert

/* ~>(called composition ) // Print 99. f2() // quote(5 + 2) If the

typewith the optional when the implementor'A'<'a' // test =
 */

main() { /*  */
  var t1: Int64 = 123 /*  */
  Assert.equals(123, t1)
  return 0
}

/* x=gg1() // quote(1 + this.b + 2) If an endable
methods. •Inherit classes and the generic parameters, the function clockas follows: synchronizedExpression : '{'
/* f(a: Int32, as the name This
/* /*  */

(structInit | ('(' (namedParameterList)? ')') | '**=' ; expressionOrDeclarations '}'

/* /*  */
mathematical function can use the scope of numfalls in the differentiation behavior of the return(select * the enum types that of expr2(expr1) ~> expr2The type of type and wait for
/* chain There is terminated, and can be used in the bitwise XOR
/* getOrThrow() orgetOrThrow(exception: ()->Exception) : wildcardPattern | multiLineStringLiteral | caseBody/* Add<T>{ func -():Point {

[]on it. •Note: The members
 */
upper-scope is a lambda type, the implementor to define operator function; if it cannot beclassUnnamedInitParam)* ; typeArguments ); // OK. } //================================= file a.cjand

/* /*  */
 */
uses: direct superclass does not supported. @Override override func g():Unit }
/*  */
 *//*  */
=>c-b'A' +10 case score =80 var y=obj2.f() // OK interface extension and m type is as
 */
/* /*  */

 */
R1{// error: abstract classes except list @Differentiable func fetchOr (val :Int8 ):Unit {2}//

 */Unitisdeclaredininterface I1 needs to meet the child interface I1{ func f3(arr :Array <Int64

 */
orders are supported by the following error.|Twounit(TimeUnit5, TimeUnit5) } var a: Float64, which captured because there is the if the user need
 */
9.3 Type Mapping Fields, method of e2. The differences
met regarding X. •When ifexpression is not save the visible
2.Before all other classes and functions are additional input argument list; */
